--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,16 +4,18 @@
 :root {
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-  background: linear-gradient(135deg, #000428 0%, #004e92 100%);  
+  font-weight: 400; 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background-color: #ffffff;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.homebg {
+  background: linear-gradient(135deg, #000428 0%, #004e92 100%); 
 }
 
 a {
@@ -22,7 +24,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #041541;
+  color: #f2f2f2;
 }
 
 body {
